// Vitest Snapshot v1

exports[`Stepper > percent work 1`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-md ix-stepper-with-percent\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check\\" role=\\"img\\" aria-label=\\"check\\"></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\">
      <div class=\\"ix-progress-circle ix-progress ix-progress-normal\\" style=\\"width: 40px; height: 40px; font-size: 12px;\\"><svg viewBox=\\"0 0 100 100\\">
          <!---->
          <path class=\\"ix-progress-circle-trail\\" style=\\"stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;\\" stroke=\\"#f5f5f5\\" fill-opacity=\\"0\\" stroke-linecap=\\"round\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
          <path class=\\"ix-progress-circle-path ix-progress-circle-bg\\" style=\\"transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; stroke-dasharray: 30.159289474462014px 301.59289474462014px; stroke-dashoffset: -0px;\\" fill-opacity=\\"0\\" stroke-linecap=\\"round\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
        </svg>
        <div class=\\"ix-progress-info\\">
          <!---->
        </div>
      </div><span>2</span>
    </div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;

exports[`Stepper > percent work 2`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-md ix-stepper-with-percent\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check\\" role=\\"img\\" aria-label=\\"check\\"></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\">
      <div class=\\"ix-progress-circle ix-progress ix-progress-normal\\" style=\\"width: 40px; height: 40px; font-size: 12px;\\"><svg viewBox=\\"0 0 100 100\\">
          <!---->
          <path class=\\"ix-progress-circle-trail\\" style=\\"stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;\\" stroke=\\"#f5f5f5\\" fill-opacity=\\"0\\" stroke-linecap=\\"round\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
          <path class=\\"ix-progress-circle-path ix-progress-circle-bg\\" style=\\"transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; stroke-dasharray: 150.79644737231007px 301.59289474462014px; stroke-dashoffset: -0px;\\" fill-opacity=\\"0\\" stroke-linecap=\\"round\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
        </svg>
        <div class=\\"ix-progress-info\\">
          <!---->
        </div>
      </div><span>2</span>
    </div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;

exports[`Stepper > percent work 3`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-md ix-stepper-with-percent\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check\\" role=\\"img\\" aria-label=\\"check\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"check\\">
          <path d=\\"M158.912 440.768a12.8 12.8 0 0 1 18.112 0l262.4 262.464 443.52-443.52a12.8 12.8 0 0 1 18.112 0l27.2 27.2a12.8 12.8 0 0 1 0 18.112L448.512 784.64a12.8 12.8 0 0 1-18.112 0L131.84 486.016a12.8 12.8 0 0 1 0-18.112l27.136-27.136z\\"></path>
        </svg></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\">
      <div class=\\"ix-progress-circle ix-progress ix-progress-success\\" style=\\"width: 40px; height: 40px; font-size: 12px;\\"><svg viewBox=\\"0 0 100 100\\">
          <!---->
          <path class=\\"ix-progress-circle-trail\\" style=\\"stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;\\" stroke=\\"#f5f5f5\\" fill-opacity=\\"0\\" stroke-linecap=\\"round\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
          <path class=\\"ix-progress-circle-path ix-progress-circle-bg\\" style=\\"transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px;\\" fill-opacity=\\"0\\" stroke-linecap=\\"round\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
        </svg>
        <div class=\\"ix-progress-info\\">
          <!---->
        </div>
      </div><span>2</span>
    </div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;

exports[`Stepper > render work 1`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-md\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check\\" role=\\"img\\" aria-label=\\"check\\"></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>2</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;
